fixing color for better visibility

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,7 @@
  html{
     font-family: Helvetica, sans-serif;
     font: 1.3em sans-serif;
-    background-color: #F3F4F4;
+    background-color: #f7f3d4;
   }
 
   form{
